[package]
name = "sbbf-rs-safe"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Split block bloom filter implementation"
homepage = "https://github.com/ozgrakkurt/sbbf-rs-safe"
repository = "https://github.com/ozgrakkurt/sbbf-rs-safe"
authors = ["Ozgur Akkurt <oezgurmakkurt@gmail.com>"]

[dependencies]
sbbf-rs = "0.2.0"
