[package]
name = "sbbf-rs-safe"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Split block bloom filter implementation"
homepage = "https://github.com/ozgrakkurt/sbbf-rs-safe"
repository = "https://github.com/ozgrakkurt/sbbf-rs-safe"
authors = ["Ozgur Akkurt <oezgurmakkurt@gmail.com>"]

[dependencies]
sbbf-rs = "0.2"

[dev-dependencies]
probabilistic-collections = "0.7"
bloom = "0.3"
fastbloom-rs = "0.5"
solana-bloom = "1.16"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
wyhash = "0.5"

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false

[profile.release]
codegen-units = 1
lto = true
